[project]
name = "dnssec-tracker"
version = "0.1.0"
description = "Long-running observer of BIND dnssec-policy events for analysis and reporting"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Peter" }]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "dnspython>=2.6",
    "weasyprint>=62.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
dnssec-tracker = "dnssec_tracker.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dnssec_tracker*"]

[tool.setuptools.package-data]
dnssec_tracker = [
    "web/templates/*.html",
    "web/static/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
